@@ -56,7 +56,7 @@ use MIME::QuotedPrint;
 @ISA = qw(MIME::Decoder);
 
 # The package version, both in 1.23 style *and* usable by MakeMaker:
-$VERSION = "5.427";
+$VERSION = "5.428";
 
 #------------------------------
 # If we have MIME::QuotedPrint 3.03 or later, use the three-argument
